Fixed the shifting issues. Removed left margin from .join and #content give margin auto to #content. Thank you Chamu from SLACK

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*-------------------- BASE ----------------------*/
+
 * {
     margin-left: 0;
     margin-right: 0;
@@ -15,6 +17,7 @@ html {
     color: #abafb8;
     height: auto;   
 }
+/*--------------------- JOIN --------------------------*/
 
 .join {
     line-height: 1.5em;
@@ -23,14 +26,13 @@ html {
     flex-direction: column;
     width: 81%;
     margin: 0 auto;
-    margin-left: 13px;
+    
     margin-top: 5em;
     padding-bottom: 7px;
     padding-left: 30px;
     padding-right: 15px;  
     background-color: white;
     border-radius: 5px 5px 0 0;
-    box-sizing:
 }
 
 .join h1 {
@@ -43,9 +45,10 @@ html {
 }
 
 .join p {
-    line-height: 1.857em;
-    
+    line-height: 1.857em;    
 }
+
+/*------------------------ SUBSCRIPTION AND WHY US ------------------*/
 
 #content {
     display: flex;
@@ -90,7 +93,7 @@ html {
     height: 50px;
     border-radius: 5px;
     font-family: 'Karla', sans-serif;
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 1.2em;
     color: #fff;
     border: 0.5px solid #bfdf32;
@@ -119,39 +122,46 @@ html {
 }
 
 .footer {
-    
-    margin-top: 2.5em;
+    margin-top: 2em;
 }
 
-.footer .attribution {
-    
+.footer .attribution { 
     font-size: .625em;
 }
 
-/*---------------- Media Queries Start ------------------- */
+/*===============================================================
+  Media Queries
+=============================================================== */ 
 
+/* ----------------- Tablet ------------------------ */
 @media all and (min-width: 768px) {
 
     .join {
-        margin-left: 50px;
+        margin-left: 
     }
 }
 
+@media all and (min-width: 1024px) {
+    .join {
+        margin: 0 auto;
+    }
+}
 
-
+/* -------------------- Desktop ---------------------- */
 @media all and (min-width: 1200px) {
     
     html {
         font-size: 1.875em;
     }
 
-   
     .join {
         width: 80%; 
         display: block;
         margin: 0 auto;
+        margin-top: 3em;
+        padding-top: 7px;
         box-sizing: border-box;
-        border-radius: 5px 5px 0 0 
+        border-radius: 5px 5px 0 0;
     }
 
     .join h3 {
@@ -161,53 +171,26 @@ html {
     #content {
         display: flex;
         justify-content: center;
-        margin-left: 5.96875em;
+        margin: auto;
         flex-flow: row;
         width: 80%;
     }
 
     .subscription {
-        height: auto;
-        padding-left: 30px;
-        padding-right: 15px;
-        margin: 0 auto;
-        background-color: #2bb3b1;
-        color: #fff;
-        padding-top: 10px;
-        padding-bottom: 25px;
         line-height: 1em;
         border-radius: 0 0 0 5px;    
     }
 
     .why-us {
-        width: 81%;
-        height: auto;
         margin: 0 auto;
-        padding-left: 30px;
-        padding-right: 15px;
-        background-color: #4abebd;
-        line-height: 1.5em;
-        border-radius: 0 0 5px 0;
-        color: #e6ffff;
+        border-radius: 0 0 5px 0;   
     }        
 }
 
+/* ======================================================================================
+ THANK YOU FOR TAKING YOUR TIME LOOKING THROUGH MY CODE AND HELP ME SPOT ANY ERRORS. ")
+ ====================================================================================== */
 
 
 
 
-
-
-line-height: 1.5em;
-display: flex;
-justify-content: center;
-flex-direction: column;
-width: 59%;
-margin-top: 5em;
-margin-left: 50px;
-padding-bottom: 7px;
-padding-left: 30px;
-padding-right: 0;  
-background-color: white;
-border-radius: 5px 5px 0 0;
-box-sizing: border-box;
